--- a/hoverboard/data/posts/2016-09-22-c4p-time.markdown
+++ b/hoverboard/data/posts/2016-09-22-c4p-time.markdown
@@ -1,4 +1,4 @@
-Silicon Valley GDG is proud to announce GDG DevFest West 2016. Like the years before, the event will be held on Sunday the November 13 in Mountain View, CA. Set aside all your business at this time and make plans to head to the Googleplex..
+Silicon Valley GDG is proud to announce GDG DevFest West 2016. Like the years before, the event will be held on Sunday the November 13 in Mountain View, CA. Set aside all your business at this time and make plans to head to the Googleplex.
 
 That means that it is time to open [call for talk submissions](https://docs.google.com/forms/d/e/1FAIpQLSdbyS5xQHFLKDWUe9qnCi-grB3QcBkFqk7Qufmz0KsDdy8PsA/viewform). If you are passionate about your work and want to share your experience with other, sign up.
 
